--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5935c6e6-a5ae-4d73-8f80-03c7d36775f0",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e17d0c08-27d2-4cc9-bbd4-02abcd14d7c2",
    "metadata": {},
    "outputs": [],
@@ -95,10 +95,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f6342877-1097-44e2-b55a-efdde6687c52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      fun: 0.2419293641053542\n",
+       " hess_inv: <12x12 LbfgsInvHessProduct with dtype=float64>\n",
+       "      jac: array([-4.06262290e-05,  3.01164680e-05,  2.53243944e-06,  9.46372400e-06,\n",
+       "        6.41968602e-05,  1.07553924e-04,  4.11875285e-05,  7.55580460e-05,\n",
+       "        2.39331231e-05,  8.96885272e-05,  1.89380327e-05,  5.22453826e-05])\n",
+       "  message: 'CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH'\n",
+       "     nfev: 81\n",
+       "      nit: 68\n",
+       "     njev: 81\n",
+       "   status: 0\n",
+       "  success: True\n",
+       "        x: array([ 1.15389091,  2.01172371,  0.15216369,  2.06724838,  0.04200508,\n",
+       "        3.22775792,  2.3581837 ,  0.01236656,  1.51382544, -0.06036563,\n",
+       "        3.03648058,  0.07705838])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "random.seed(1)\n",
     "poly_one.fit(fit_site_level_first=False)\n",
@@ -123,10 +147,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bcee9d95-a18f-4885-92bf-f14b569a72ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ref_epitope</th>\n",
+       "      <th>self_epitope</th>\n",
+       "      <th>r2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.872404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.872404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ref_epitope self_epitope        r2\n",
+       "0           1            1  1.000000\n",
+       "1           1            2 -0.872404\n",
+       "2           2            1 -0.872404\n",
+       "3           2            2  1.000000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "corr_df = poly_two._make_correlation_matrix(poly_one)\n",
     "assert len(corr_df) == n_eps ** 2\n",
@@ -136,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e98d2a2c-94ea-4416-884e-608c2cdf81c2",
    "metadata": {},
    "outputs": [],
@@ -157,10 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0207ee00-4d5a-4508-84d3-adff482e65b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zthornto/opt/anaconda3/envs/polyclonal/lib/python3.10/site-packages/pandas/core/indexing.py:1732: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_block(indexer, value, name)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a test example where two models \"flipped\" the epitopes\n",
     "one_df = poly_one.mut_escape_df\n",
@@ -188,10 +292,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "816a369a-22e9-4194-8599-fb7f6dbefafe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ref_epitope</th>\n",
+       "      <th>self_epitope</th>\n",
+       "      <th>r2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.872404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.872404</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ref_epitope self_epitope        r2\n",
+       "0           1            1 -0.872404\n",
+       "1           1            2  1.000000\n",
+       "2           2            1  1.000000\n",
+       "3           2            2 -0.872404"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "corr_df2 = flipped_poly._make_correlation_matrix(original_poly)\n",
     "assert len(corr_df2) == n_eps ** 2\n",
@@ -201,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c89f357f-f9dd-4431-925e-46ca3cac0f8f",
    "metadata": {},
    "outputs": [],
@@ -222,15 +394,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f1344ba7-3ddc-42c4-bb83-571292a29972",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test make_mapping_dict\n",
     "true_dict = {\"1\": \"2\", \"2\": \"1\"}\n",
-    "flipped_poly._make_mapping_dict(test_map, original_poly)\n",
-    "assert true_dict == flipped_poly._mapping_dict"
+    "test_dict = flipped_poly._make_mapping_dict(test_map, original_poly)\n",
+    "assert true_dict == test_dict"
    ]
   },
   {
@@ -245,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f9b42ab2-a604-4621-8a59-6bff620d4f6c",
    "metadata": {},
    "outputs": [],
@@ -256,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "338a46fd-cbbe-411c-a58c-cac931e3e8c9",
    "metadata": {},
    "outputs": [],
