add tests to ensure errors are raised when they should be.

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -25,6 +25,8 @@
     "\n",
     "import polyclonal.utils as utils\n",
     "\n",
+    "import unittest\n",
+    "\n",
     "activity_wt_df = pd.DataFrame({\"epitope\": [\"e1\", \"e2\"], \"activity\": [2.0, 1.0]})\n",
     "\n",
     "mut_escape_df = pd.DataFrame(\n",
@@ -435,6 +437,40 @@
    "source": [
     "original_poly.harmonize_epitopes_with(flipped_poly)\n",
     "assert original_poly.aligned_mut_escape_df.equals(flipped_poly.mut_escape_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34e02a76-3ecf-4890-b9dc-60d866306ded",
+   "metadata": {},
+   "source": [
+    "Here, we test the behavior of the epitope harmonization when epitopes aren't \"1-to-1\" (i.e., one epitope maps to multiple epitopes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "523e1c36-ed98-4a60-8d73-32f3397af0a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ExceptionTests(unittest.TestCase):\n",
+    "\n",
+    "    # Returns true if 1 + '1' raises a TypeError\n",
+    "    def test_non_diagonal_mapping_matrix(self):\n",
+    "        self.test_corr_df = pd.DataFrame(\n",
+    "            {\n",
+    "                \"ref_epitope\": [1, 1, 2, 2],\n",
+    "                \"self_epitope\": [1, 2, 1, 2],\n",
+    "                \"r2\": [0.5, 0.5, 0.5, 0.5],\n",
+    "            }\n",
+    "        )\n",
+    "        with self.assertRaises(ValueError):\n",
+    "            flipped_poly._create_mapping_matrix(self.test_corr_df)\n",
+    "\n",
+    "\n",
+    "except_tests = ExceptionTests()\n",
+    "except_tests.test_non_diagonal_mapping_matrix()"
    ]
   }
  ],
