--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -237,7 +237,7 @@
    "source": [
     "# This dataframe should return the following mapping matrix:\n",
     "true_map = numpy.array([[1, 0], [0, 1]])\n",
-    "test_map = poly_two._create_mapping_matrix(corr_df)\n",
+    "test_map = poly_two._create_max_correlation_mapping_matrix(corr_df)\n",
     "assert numpy.array_equal(true_map, test_map)"
    ]
   },
@@ -381,7 +381,7 @@
    "outputs": [],
    "source": [
     "true_map = numpy.array([[0, 1], [1, 0]])\n",
-    "test_map = flipped_poly._create_mapping_matrix(corr_df2)\n",
+    "test_map = flipped_poly._create_max_correlation_mapping_matrix(corr_df2)\n",
     "assert numpy.array_equal(true_map, test_map)\n",
     "assert numpy.all(test_map.sum(axis=1) == 1)"
    ]
@@ -441,6 +441,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f42efb5-ec4f-41cd-b6cc-b963fc4c30d4",
+   "metadata": {},
+   "source": [
+    "Now we want to test if the params are the same (i.e., if we update these DFs and use them to create a new polyclonal object, we should get the same parameters out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c3d005b8-f9ac-4dd0-b746-0747a9733c06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flipped_poly_clone = Polyclonal(\n",
+    "    mut_escape_df=flipped_poly.aligned_mut_escape_df,\n",
+    "    activity_wt_df=flipped_poly.activity_wt_df,\n",
+    "    data_to_fit=None,\n",
+    ")\n",
+    "assert flipped_poly_clone.mut_escape_df.equals(flipped_poly.aligned_mut_escape_df)\n",
+    "assert flipped_poly_clone.activity_wt_df.equals(flipped_poly.activity_wt_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "37c29fa0-ef90-4be2-9d11-a2cbe15af847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert numpy.array_equal(flipped_poly_clone._params, flipped_poly._params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "34e02a76-3ecf-4890-b9dc-60d866306ded",
    "metadata": {},
    "source": [
@@ -449,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "523e1c36-ed98-4a60-8d73-32f3397af0a9",
    "metadata": {},
    "outputs": [],
@@ -466,7 +500,7 @@
     "            }\n",
     "        )\n",
     "        with self.assertRaises(ValueError):\n",
-    "            flipped_poly._create_mapping_matrix(self.test_corr_df)\n",
+    "            flipped_poly._create_max_correlation_mapping_matrix(self.test_corr_df)\n",
     "\n",
     "\n",
     "except_tests = ExceptionTests()\n",
