making testing notebook more readable.

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab3f766b-ea28-42e2-ac00-8d725f367b0c",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5935c6e6-a5ae-4d73-8f80-03c7d36775f0",
@@ -136,7 +144,7 @@
    "id": "732f808e-be0a-4434-aa8e-f3b54896c2a3",
    "metadata": {},
    "source": [
-    "### Tests"
+    "## Tests"
    ]
   },
   {
@@ -144,6 +152,7 @@
    "id": "9092e1f8-a762-4d54-9ef4-45fddea18b4c",
    "metadata": {},
    "source": [
+    "### Helper methods\n",
     "The following tests assess if the helper methods for epitope harmonizing all work when we have two identical models (1s in correlation matrix should be on diagonal):"
    ]
   },
@@ -239,6 +248,14 @@
     "true_map = numpy.array([[1, 0], [0, 1]])\n",
     "test_map = poly_two._create_max_correlation_mapping_matrix(corr_df)\n",
     "assert numpy.array_equal(true_map, test_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cea925e-e61c-46cd-b4bf-6dd743e75f88",
+   "metadata": {},
+   "source": [
+    "#### Scenario: Flipped `mut_escape_df`"
    ]
   },
   {
@@ -412,31 +429,28 @@
    "id": "ba79ca4f-779b-4fd3-aa01-804243830d69",
    "metadata": {},
    "source": [
-    "Now we harmonize the flipped object with the original one -- since these are the exact same dataframes but with flipped epitopes, the `aligned_mut_escape_df` should match the original's `mut_escape_df`.\n",
+    "### Epitope harmonization\n",
     "\n",
-    "We can also do the reverse:"
+    "Now we harmonize the flipped object with the original one -- since these are the exact same dataframes but with flipped epitopes, after harmonization, `flipped_poly.mut_escape_df` should be equal to `original_poly.mut_escape_df`.\n",
+    "\n",
+    "We should also have equal `activity_wt_df` and `_params` propertoes after harmonization as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "f9b42ab2-a604-4621-8a59-6bff620d4f6c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "assert not flipped_poly.mut_escape_df.equals(original_poly.mut_escape_df)\n",
+    "assert not flipped_poly.activity_wt_df.equals(original_poly.activity_wt_df)\n",
+    "assert not numpy.array_equal(original_poly._params, flipped_poly._params)\n",
     "flipped_poly.harmonize_epitopes_with(original_poly)\n",
-    "assert flipped_poly.aligned_mut_escape_df.equals(original_poly.mut_escape_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "338a46fd-cbbe-411c-a58c-cac931e3e8c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_poly.harmonize_epitopes_with(flipped_poly)\n",
-    "assert original_poly.aligned_mut_escape_df.equals(flipped_poly.mut_escape_df)"
+    "assert flipped_poly.mut_escape_df.equals(original_poly.mut_escape_df)\n",
+    "assert flipped_poly.mut_escape_df.equals(original_poly.mut_escape_df)\n",
+    "assert flipped_poly.activity_wt_df.equals(original_poly.activity_wt_df)\n",
+    "assert numpy.array_equal(original_poly._params, flipped_poly._params)"
    ]
   },
   {
@@ -478,12 +492,18 @@
    "id": "34e02a76-3ecf-4890-b9dc-60d866306ded",
    "metadata": {},
    "source": [
-    "Here, we test the behavior of the epitope harmonization when epitopes aren't \"1-to-1\" (i.e., one epitope maps to multiple epitopes)"
+    "### Throwing exceptions when expected\n",
+    "Here, we test the behavior of the epitope harmonization when violations are violated.\n",
+    "Examples of these violations include:\n",
+    "\n",
+    "* Epitopes aren't \"1-to-1\" (i.e., one epitope maps to multiple epitopes)\n",
+    "* Models have differing numbers of epitopes (non-square mapping matrix)\n",
+    "* Mapping matrix isn't binary (strictly 0/1 entries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "523e1c36-ed98-4a60-8d73-32f3397af0a9",
    "metadata": {},
    "outputs": [],
