update "flipped" tests and sanity checks.

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -288,17 +288,387 @@
     "# Create a test example where two models \"flipped\" the epitopes\n",
     "one_df = poly_one.mut_escape_df\n",
     "two_df = poly_two.mut_escape_df\n",
+    "one_wt_df = poly_one.activity_wt_df\n",
+    "two_wt_df = pd.DataFrame(\n",
+    "    {\"epitope\": one_wt_df.epitope.values, \"activity\": one_wt_df.activity[::-1]}\n",
+    ")\n",
     "\n",
+    "# Create a \"flipped\" version of the `activity_wt_df`\n",
     "two_df.escape.iloc[5:10] = one_df.escape.iloc[0:5]\n",
     "two_df.escape.iloc[0:5] = one_df.escape.iloc[5:10]\n",
     "\n",
+    "\n",
     "# Create polyclonal objects (can't seem to edit `mut_escape_df` bc it's a property)\n",
     "original_poly = Polyclonal(\n",
-    "    mut_escape_df=one_df, activity_wt_df=poly_one.activity_wt_df, data_to_fit=None\n",
+    "    mut_escape_df=one_df, activity_wt_df=one_wt_df, data_to_fit=None\n",
     ")\n",
     "flipped_poly = Polyclonal(\n",
-    "    mut_escape_df=two_df, activity_wt_df=poly_two.activity_wt_df, data_to_fit=None\n",
+    "    mut_escape_df=two_df, activity_wt_df=two_wt_df, data_to_fit=None\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7411789-7a9e-483a-8f18-68c2f5686c45",
+   "metadata": {},
+   "source": [
+    "##### Sanity checks\n",
+    "Here, we just want to make sure the `mut_escape_df` properties for each `Polyclonal` object are flipped. \n",
+    "This should result in the escape values for a given mutation (i.e. M1C), in epitopes 1 and of the `orignal_poly` object to be flipped in the `flipped_poly` object, and so on.\n",
+    "\n",
+    "This should manifest in the `_params` data field as binary swaps across the arrays (i.e. [1, 2, 3, 4] --> [2,1,4,3]) after the first two epitope params (because params are on a mutation-epitope ordering)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "219b9d4a-becd-4d0f-b21c-64860a440363",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>epitope</th>\n",
+       "      <th>site</th>\n",
+       "      <th>wildtype</th>\n",
+       "      <th>mutant</th>\n",
+       "      <th>mutation</th>\n",
+       "      <th>escape</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>C</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>0.152164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G2A</td>\n",
+       "      <td>0.042005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>K</td>\n",
+       "      <td>A4K</td>\n",
+       "      <td>2.358184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>L</td>\n",
+       "      <td>A4L</td>\n",
+       "      <td>1.513825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>A4Q</td>\n",
+       "      <td>3.036481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>C</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>2.067248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G2A</td>\n",
+       "      <td>3.227758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>K</td>\n",
+       "      <td>A4K</td>\n",
+       "      <td>0.012367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>L</td>\n",
+       "      <td>A4L</td>\n",
+       "      <td>-0.060366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>A4Q</td>\n",
+       "      <td>0.077058</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  epitope  site wildtype mutant mutation    escape\n",
+       "0       1     1        M      C      M1C  0.152164\n",
+       "1       1     2        G      A      G2A  0.042005\n",
+       "2       1     4        A      K      A4K  2.358184\n",
+       "3       1     4        A      L      A4L  1.513825\n",
+       "4       1     4        A      Q      A4Q  3.036481\n",
+       "5       2     1        M      C      M1C  2.067248\n",
+       "6       2     2        G      A      G2A  3.227758\n",
+       "7       2     4        A      K      A4K  0.012367\n",
+       "8       2     4        A      L      A4L -0.060366\n",
+       "9       2     4        A      Q      A4Q  0.077058"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_poly.mut_escape_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1ca2b2df-b5d4-46ac-adee-0f1fd8d0ecd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>epitope</th>\n",
+       "      <th>site</th>\n",
+       "      <th>wildtype</th>\n",
+       "      <th>mutant</th>\n",
+       "      <th>mutation</th>\n",
+       "      <th>escape</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>C</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>2.067248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G2A</td>\n",
+       "      <td>3.227758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>K</td>\n",
+       "      <td>A4K</td>\n",
+       "      <td>0.012367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>L</td>\n",
+       "      <td>A4L</td>\n",
+       "      <td>-0.060366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>A4Q</td>\n",
+       "      <td>0.077058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>C</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>0.152164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>G</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G2A</td>\n",
+       "      <td>0.042005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>K</td>\n",
+       "      <td>A4K</td>\n",
+       "      <td>2.358184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>L</td>\n",
+       "      <td>A4L</td>\n",
+       "      <td>1.513825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>A4Q</td>\n",
+       "      <td>3.036481</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  epitope  site wildtype mutant mutation    escape\n",
+       "0       1     1        M      C      M1C  2.067248\n",
+       "1       1     2        G      A      G2A  3.227758\n",
+       "2       1     4        A      K      A4K  0.012367\n",
+       "3       1     4        A      L      A4L -0.060366\n",
+       "4       1     4        A      Q      A4Q  0.077058\n",
+       "5       2     1        M      C      M1C  0.152164\n",
+       "6       2     2        G      A      G2A  0.042005\n",
+       "7       2     4        A      K      A4K  2.358184\n",
+       "8       2     4        A      L      A4L  1.513825\n",
+       "9       2     4        A      Q      A4Q  3.036481"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flipped_poly.mut_escape_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "61285fb9-d7ee-402c-8a8d-85263d27e21e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.15389091,  2.01172371,  0.15216369,  2.06724838,  0.04200508,\n",
+       "        3.22775792,  2.3581837 ,  0.01236656,  1.51382544, -0.06036563,\n",
+       "        3.03648058,  0.07705838])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_poly._params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "57cd2c3e-e7d9-4766-a94f-f5a6ccd28fec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.01172371,  1.15389091,  2.06724838,  0.15216369,  3.22775792,\n",
+       "        0.04200508,  0.01236656,  2.3581837 , -0.06036563,  1.51382544,\n",
+       "        0.07705838,  3.03648058])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flipped_poly._params"
    ]
   },
   {
@@ -306,12 +676,13 @@
    "id": "d2de6cb9-fdf1-42f3-9977-17f7eb1945d0",
    "metadata": {},
    "source": [
+    "#### Scenario: Helper method input violations\n",
     "Another set of tests on the helper methods, this time, 1s should be on the \"off-diagonal\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "816a369a-22e9-4194-8599-fb7f6dbefafe",
    "metadata": {},
    "outputs": [
