variable name updates

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -185,7 +185,7 @@
        "      <th></th>\n",
        "      <th>ref_epitope</th>\n",
        "      <th>self_epitope</th>\n",
-       "      <th>r2</th>\n",
+       "      <th>correlation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -218,11 +218,11 @@
        "</div>"
       ],
       "text/plain": [
-       "  ref_epitope self_epitope        r2\n",
-       "0           1            1  1.000000\n",
-       "1           1            2 -0.872404\n",
-       "2           2            1 -0.872404\n",
-       "3           2            2  1.000000"
+       "  ref_epitope self_epitope  correlation\n",
+       "0           1            1     1.000000\n",
+       "1           1            2    -0.872404\n",
+       "2           2            1    -0.872404\n",
+       "3           2            2     1.000000"
       ]
      },
      "execution_count": 4,
@@ -233,7 +233,7 @@
    "source": [
     "corr_df = poly_two._make_correlation_matrix(poly_one)\n",
     "assert len(corr_df) == n_eps ** 2\n",
-    "assert corr_df.r2.between(-1, 1).all()\n",
+    "assert corr_df.correlation.between(-1, 1).all()\n",
     "corr_df"
    ]
   },
@@ -709,7 +709,7 @@
        "      <th></th>\n",
        "      <th>ref_epitope</th>\n",
        "      <th>self_epitope</th>\n",
-       "      <th>r2</th>\n",
+       "      <th>correlation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -742,14 +742,14 @@
        "</div>"
       ],
       "text/plain": [
-       "  ref_epitope self_epitope        r2\n",
-       "0           1            1 -0.872404\n",
-       "1           1            2  1.000000\n",
-       "2           2            1  1.000000\n",
-       "3           2            2 -0.872404"
+       "  ref_epitope self_epitope  correlation\n",
+       "0           1            1    -0.872404\n",
+       "1           1            2     1.000000\n",
+       "2           2            1     1.000000\n",
+       "3           2            2    -0.872404"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,13 +757,13 @@
    "source": [
     "corr_df2 = flipped_poly._make_correlation_matrix(original_poly)\n",
     "assert len(corr_df2) == n_eps ** 2\n",
-    "assert corr_df2.r2.between(-1, 1).all()\n",
+    "assert corr_df2.correlation.between(-1, 1).all()\n",
     "corr_df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "c89f357f-f9dd-4431-925e-46ca3cac0f8f",
    "metadata": {},
    "outputs": [],
