--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -834,27 +834,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "c3d005b8-f9ac-4dd0-b746-0747a9733c06",
    "metadata": {},
    "outputs": [],
    "source": [
     "flipped_poly_clone = Polyclonal(\n",
-    "    mut_escape_df=flipped_poly.aligned_mut_escape_df,\n",
+    "    mut_escape_df=flipped_poly.mut_escape_df,\n",
     "    activity_wt_df=flipped_poly.activity_wt_df,\n",
     "    data_to_fit=None,\n",
     ")\n",
-    "assert flipped_poly_clone.mut_escape_df.equals(flipped_poly.aligned_mut_escape_df)\n",
-    "assert flipped_poly_clone.activity_wt_df.equals(flipped_poly.activity_wt_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "37c29fa0-ef90-4be2-9d11-a2cbe15af847",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Sanity checks\n",
+    "assert flipped_poly_clone.mut_escape_df.equals(flipped_poly.mut_escape_df)\n",
+    "assert flipped_poly_clone.activity_wt_df.equals(flipped_poly.activity_wt_df)\n",
     "assert numpy.array_equal(flipped_poly_clone._params, flipped_poly._params)"
    ]
   },
@@ -887,15 +879,27 @@
     "            {\n",
     "                \"ref_epitope\": [1, 1, 2, 2],\n",
     "                \"self_epitope\": [1, 2, 1, 2],\n",
-    "                \"r2\": [0.5, 0.5, 0.5, 0.5],\n",
+    "                \"correlation\": [0.5, 0.5, 0.5, 0.5],\n",
     "            }\n",
     "        )\n",
     "        with self.assertRaises(ValueError):\n",
     "            flipped_poly._create_max_correlation_mapping_matrix(self.test_corr_df)\n",
     "\n",
+    "    def test_non_square_mapping_matrix(self):\n",
+    "        test_mat = numpy.array([[1, 0], [0, 1], [0, 0]])\n",
+    "        with self.assertRaises(ValueError):\n",
+    "            flipped_poly._check_epitope_mapping_matrix(test_mat)\n",
+    "\n",
+    "    def test_mapping_matrix_values(self):\n",
+    "        test_mat = numpy.array([[1, 0], [0, 2]])\n",
+    "        with self.assertRaises(ValueError):\n",
+    "            flipped_poly._check_epitope_mapping_matrix(test_mat)\n",
+    "\n",
     "\n",
     "except_tests = ExceptionTests()\n",
-    "except_tests.test_non_diagonal_mapping_matrix()"
+    "except_tests.test_non_diagonal_mapping_matrix()\n",
+    "except_tests.test_non_square_mapping_matrix()\n",
+    "except_tests.test_mapping_matrix_values()"
    ]
   }
  ],
