supress annoying warnings.

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -271,20 +271,14 @@
    "execution_count": 6,
    "id": "0207ee00-4d5a-4508-84d3-adff482e65b3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zthornto/opt/anaconda3/envs/polyclonal/lib/python3.10/site-packages/pandas/core/indexing.py:1732: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_single_block(indexer, value, name)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# A quick fix for pandas warning.\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "warnings.simplefilter(\"ignore\")\n",
+    "\n",
     "# Create a test example where two models \"flipped\" the epitopes\n",
     "one_df = poly_one.mut_escape_df\n",
     "two_df = poly_two.mut_escape_df\n",
@@ -784,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "f1344ba7-3ddc-42c4-bb83-571292a29972",
    "metadata": {},
    "outputs": [],
