--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -108,35 +108,11 @@
    "execution_count": 3,
    "id": "f6342877-1097-44e2-b55a-efdde6687c52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "      fun: 0.2419293641053542\n",
-       " hess_inv: <12x12 LbfgsInvHessProduct with dtype=float64>\n",
-       "      jac: array([-4.06262290e-05,  3.01164680e-05,  2.53243944e-06,  9.46372400e-06,\n",
-       "        6.41968602e-05,  1.07553924e-04,  4.11875285e-05,  7.55580460e-05,\n",
-       "        2.39331231e-05,  8.96885272e-05,  1.89380327e-05,  5.22453826e-05])\n",
-       "  message: 'CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH'\n",
-       "     nfev: 81\n",
-       "      nit: 68\n",
-       "     njev: 81\n",
-       "   status: 0\n",
-       "  success: True\n",
-       "        x: array([ 1.15389091,  2.01172371,  0.15216369,  2.06724838,  0.04200508,\n",
-       "        3.22775792,  2.3581837 ,  0.01236656,  1.51382544, -0.06036563,\n",
-       "        3.03648058,  0.07705838])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "random.seed(1)\n",
-    "poly_one.fit(fit_site_level_first=False)\n",
-    "poly_two.fit(fit_site_level_first=False)"
+    "_ = poly_one.fit(fit_site_level_first=False)\n",
+    "_ = poly_two.fit(fit_site_level_first=False)"
    ]
   },
   {
@@ -275,9 +251,8 @@
    "source": [
     "# A quick fix for pandas warning.\n",
     "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "warnings.simplefilter(\"ignore\")\n",
+    "warnings.filterwarnings('ignore')\n",
+    "warnings.simplefilter('ignore')\n",
     "\n",
     "# Create a test example where two models \"flipped\" the epitopes\n",
     "one_df = poly_one.mut_escape_df\n",
