black format notebooks

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -251,8 +251,9 @@
    "source": [
     "# A quick fix for pandas warning.\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "warnings.simplefilter('ignore')\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "warnings.simplefilter(\"ignore\")\n",
     "\n",
     "# Create a test example where two models \"flipped\" the epitopes\n",
     "one_df = poly_one.mut_escape_df\n",
