`bootstrap.py` --> `polyclonal_collection.py`

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -5,7 +5,15 @@
    "id": "1aa90605-cff5-49e8-bd63-106e9efc69fc",
    "metadata": {},
    "source": [
-    "# Notebook for getting started with `polyclonal` bootstrapping"
+    "# Getting started with `polyclonal` bootstrapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd93cfd2-6d65-4d08-8bef-2dfe736f6631",
+   "metadata": {},
+   "source": [
+    "## Imports and setup"
    ]
   },
   {
@@ -17,7 +25,7 @@
    "source": [
     "import pandas as pd\n",
     "from polyclonal import Polyclonal, PolyclonalCollection\n",
-    "import polyclonal.bootstrap as boot\n",
+    "import polyclonal.polyclonal_collection as boot\n",
     "import numpy as np"
    ]
   },
