--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "test_list = pc.make_predictions(variants_df=boot_df)\n",
-    "# This funciton seems to work at generating a proper list of dataframes\n",
+    "# This function seems to work at generating a proper list of dataframes\n",
     "# TODO: However, we need to do something about failed optimizations -- should we discard models that fail?\n",
     "# Make sure we get the same number of predictions for every model\n",
     "for result in test_list:\n",
