--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -150,13 +150,16 @@
     "n_samps = 5\n",
     "n_threads = 4\n",
     "pc = PolyclonalCollection(\n",
-    "    root_polyclonal=polyclonal_data, n_samples=n_samps, n_threads=n_threads, seed=0\n",
+    "    root_polyclonal=polyclonal_data,\n",
+    "    n_bootstrap_samples=n_samps,\n",
+    "    n_threads=n_threads,\n",
+    "    seed=0,\n",
     ")\n",
     "\n",
     "# Make sure the desired number of models were created and stored\n",
     "assert len(pc.models) == n_samps\n",
     "# Make sure attributes are stored properly\n",
-    "assert pc.n_samples == n_samps\n",
+    "assert pc.n_bootstrap_samples == n_samps\n",
     "assert pc.n_threads == n_threads\n",
     "# Make sure we aren't copying the actual data from the original polyclonal model\n",
     "for i in range(n_samps):\n",
@@ -180,7 +183,10 @@
    "source": [
     "# Do two seperate seeds generate different `mut_bootstrap_freq_dict()` objects?\n",
     "pc2 = PolyclonalCollection(\n",
-    "    root_polyclonal=polyclonal_data, n_samples=n_samps, n_threads=n_threads, seed=1\n",
+    "    root_polyclonal=polyclonal_data,\n",
+    "    n_bootstrap_samples=n_samps,\n",
+    "    n_threads=n_threads,\n",
+    "    seed=1,\n",
     ")\n",
     "assert pc.mut_bootstrap_freq_dict != pc2.mut_bootstrap_freq_dict"
    ]
@@ -194,7 +200,10 @@
    "source": [
     "# What if we use the same seed with multiple threads?\n",
     "pc_copy = PolyclonalCollection(\n",
-    "    root_polyclonal=polyclonal_data, n_samples=n_samps, n_threads=n_threads, seed=0\n",
+    "    root_polyclonal=polyclonal_data,\n",
+    "    n_bootstrap_samples=n_samps,\n",
+    "    n_threads=n_threads,\n",
+    "    seed=0,\n",
     ")\n",
     "assert pc.mut_bootstrap_freq_dict == pc_copy.mut_bootstrap_freq_dict"
    ]
@@ -282,21 +291,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avg_mut_escape_dict, avg_activity_wt_dict = pc._summarize_bootstrapped_params()\n",
+    "summary_mut_escape_dict, summary_activity_wt_dict = pc._summarize_bootstrapped_params()\n",
     "stat_colnames = set([\"mean\", \"median\", \"std\"])\n",
     "\n",
     "# Basic tests to make sure summary stats are at least being recorded.\n",
-    "assert stat_colnames.issubset(avg_mut_escape_dict.keys())\n",
-    "assert stat_colnames.issubset(avg_activity_wt_dict.keys())\n",
+    "assert stat_colnames.issubset(summary_mut_escape_dict.keys())\n",
+    "assert stat_colnames.issubset(summary_activity_wt_dict.keys())\n",
     "assert (\n",
-    "    len(avg_mut_escape_dict[\"mean\"])\n",
-    "    == len(avg_mut_escape_dict[\"median\"])\n",
-    "    == len(avg_mut_escape_dict[\"std\"])\n",
+    "    len(summary_mut_escape_dict[\"mean\"])\n",
+    "    == len(summary_mut_escape_dict[\"median\"])\n",
+    "    == len(summary_mut_escape_dict[\"std\"])\n",
     ")\n",
     "assert (\n",
-    "    len(avg_activity_wt_dict[\"mean\"])\n",
-    "    == len(avg_activity_wt_dict[\"median\"])\n",
-    "    == len(avg_activity_wt_dict[\"std\"])\n",
+    "    len(summary_activity_wt_dict[\"mean\"])\n",
+    "    == len(summary_activity_wt_dict[\"median\"])\n",
+    "    == len(summary_activity_wt_dict[\"std\"])\n",
     ")"
    ]
   },
@@ -413,7 +422,7 @@
     }
    ],
    "source": [
-    "avg_mut_escape_dict[\"mean\"].head()"
+    "summary_mut_escape_dict[\"mean\"].head()"
    ]
   },
   {
@@ -510,7 +519,7 @@
     }
    ],
    "source": [
-    "avg_mut_escape_dict[\"std\"].head()"
+    "summary_mut_escape_dict[\"std\"].head()"
    ]
   },
   {
