--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do two seperate seeds generate different `mut_bootstrap_freq_dict()` objects?\n",
+    "# Do two different seeds generate different `mut_bootstrap_freq_dict()` objects?\n",
     "pc2 = PolyclonalCollection(\n",
     "    root_polyclonal=polyclonal_data,\n",
     "    n_bootstrap_samples=n_samps,\n",
@@ -246,10 +246,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a list of prediction dataframes from bootstrapped models\n",
     "test_list = pc.make_predictions(variants_df=boot_df)\n",
-    "# This function seems to work at generating a proper list of dataframes\n",
-    "# TODO: However, we need to do something about failed optimizations -- should we discard models that fail?\n",
-    "# Make sure we get the same number of predictions for every model\n",
+    "\n",
+    "# Make sure we got the same number of predictions for every model\n",
     "for result in test_list:\n",
     "    assert len(result) == len(boot_df)\n",
     "    assert not (result.shape[1]) == (boot_df.shape[1])"
@@ -262,6 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Aggregate the results\n",
     "agg_results = pc._summarize_bootstraped_predictions(test_list)\n",
     "assert len(test_list[0]) != len(agg_results)"
    ]
@@ -294,7 +295,7 @@
     "summary_mut_escape_dict, summary_activity_wt_dict = pc._summarize_bootstrapped_params()\n",
     "stat_colnames = set([\"mean\", \"median\", \"std\"])\n",
     "\n",
-    "# Basic tests to make sure summary stats are at least being recorded.\n",
+    "# Basic tests to make sure summary stats are being recorded.\n",
     "assert stat_colnames.issubset(summary_mut_escape_dict.keys())\n",
     "assert stat_colnames.issubset(summary_activity_wt_dict.keys())\n",
     "assert (\n",
@@ -316,6 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ensure center summary stats are still probabilities\n",
     "assert agg_results.mean_predicted_prob_escape.between(0, 1).all()\n",
     "assert agg_results.median_predicted_prob_escape.between(0, 1).all()"
    ]
@@ -580,7 +582,7 @@
     }
    ],
    "source": [
-    "avg_activity_wt_dict[\"median\"]"
+    "summary_activity_wt_dict[\"median\"]"
    ]
   }
  ],
